# deps_giflib

./: CMakeLists.txt
resources/: ojdkbuild_giflib.def
resources/giflib_416_cmake/: CMakeLists.txt
test/: CMakeLists.txt  giflib_test.cpp
